# mocap_optitrack

./: README.md
.git-CONFLICT-29e199df19886023bccb0ae8b2120be5/logs/: HEAD
.git-CONFLICT-29e199df19886023bccb0ae8b2120be5/refs/tags/: mocap_optitrack-0.1.0  mocap_optitrack-groovy-0.1.0
DelaParra/mocap_optitrack/: CMakeLists.txt  package.xml
DelaParra/mocap_optitrack/.git-CONFLICT-29e199df19886023bccb0ae8b2120be5/: config  index  packed-refs
DelaParra/mocap_optitrack/.git-CONFLICT-29e199df19886023bccb0ae8b2120be5/objects/pack/: pack-51875087e3aa40065bc4ee8839ea0db664c519e6.idx  pack-51875087e3aa40065bc4ee8839ea0db664c519e6.pack
DelaParra/mocap_optitrack/.git-CONFLICT-29e199df19886023bccb0ae8b2120be5/refs/heads/: master
DelaParra/mocap_optitrack/config/: mocap.yaml
DelaParra/mocap_optitrack/include/mocap_optitrack/: mocap_config.h
DelaParra/mocap_optitrack/src/: mocap_config.cpp  socket.cpp
include/mocap_optitrack/: mocap_datapackets.h
launch/: mocap.launch
mocap_optitrack/config/: mocap.yaml
mocap_optitrack/include/mocap_optitrack/: mocap_config.h  mocap_datapackets.h
mocap_optitrack/src/: mocap_config.cpp  mocap_datapackets.cpp  mocap_node.cpp
src/: mocap_datapackets.cpp  mocap_node.cpp
